--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -16,8 +16,26 @@ permissions:
   contents: read
 
 jobs:
-  pypi-publish:
 
+  tests:
+    runs-on: ubuntu-latest
+    environment: release
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.x'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
+    - name: Run Tests
+      run: |
+        pytest
+
+  pypi-publish:
     runs-on: ubuntu-latest
     environment: release
     # IMPORTANT: this permission is mandatory for trusted publishing
